# audaisy

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/runtime/: README.md  pyproject.toml
apps/runtime/src/audaisy_runtime/: __init__.py  __main__.py  app.py  container.py  errors.py  settings.py  smoke.py
apps/runtime/src/audaisy_runtime/api/: dependencies.py  router.py
apps/runtime/src/audaisy_runtime/contracts/: __init__.py  generator.py  models.py
apps/runtime/src/audaisy_runtime/imports/: import_service.py  validation.py
apps/runtime/src/audaisy_runtime/manuscript/: __init__.py  block_ids.py  normalization.py  projection.py
apps/runtime/src/audaisy_runtime/model_manager/: manager.py
apps/runtime/src/audaisy_runtime/persistence/: chapter_repository.py  database.py  document_record_repository.py  import_warning_repository.py  profile_repository.py  project_repository.py  render_job_repository.py  runtime_settings_repository.py  segment_repository.py  voice_preset_repository.py
apps/runtime/tests/: conftest.py  test_chapter_render_input_service.py  test_chapters_api.py  test_chunking_service.py  test_contract_artifacts.py  test_health_and_runtime_api.py  test_imports_api.py  test_mlx_tada_model_service.py  test_model_manager.py  test_profile_api.py  test_projects_api.py  test_real_mlx_smoke.py  test_render_jobs_api.py  test_runtime_voice_service.py
docs/: README.md
docs/trd/: backend.md  (+2 more)
(+75 files in other folders)
