[package]
name = "audaisy-desktop"
version = "0.1.0"
description = "Audaisy macOS desktop shell"
authors = ["Audaisy"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[[bin]]
name = "audaisy-desktop"
path = "src/main.rs"
